Fix select label alignement

--- a/frontend/app/styles/globals.scss
+++ b/frontend/app/styles/globals.scss
@@ -132,7 +132,7 @@ input {
 }
 
 .MuiInputLabel-shrink {
-	transform: translate(15px, 0px) scale(0.75);
+	transform: translate(15px, 0px) scale(0.75) !important;
 }
 
 .MuiFormHelperText-root {
